--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -10,8 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: LeetCode Syncv1.1
-        uses: jaspinderkohli/leetcode-sync@v1.5
+      - name: LeetCode Sync
+        uses: joshcai/leetcode-sync@v1.7
+            
             
         with:
           github-token: ${{ github.token }}
